# learnGL

./: .gitignore  Cargo.toml  README.md
engine/: Cargo.toml
engine/model/: mesh.rs  mod.rs  scene.rs
engine/src/: engine.rs  lib.rs  macro.rs  main.rs  window.rs
engine/src/ico_sphere/: b_cube.blend  b_cube.mtl
engine/src/model/: mesh.rs  mod.rs  model.rs  shader.rs
src/: camera.rs  light_main.rs  main.rs  shader.rs
src/shaders/: light.frag  light.vert  lit.frag  shader.vert
