[package]
name = "learnGL"
version = "0.1.0"
authors = ["AdaMoe <Augustheiningholst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"
rand = "0.7.3"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
