[package]
name = "engine"
version = "0.1.0"
authors = ["Sluggan <Augustheiningholst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
image = "0.19.0"
glfw = "0.37.0"
gl = "0.10.0"
tobj = "2.0.1"